<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/message_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/message_timestamp"
        android:visibility="invisible" />

    <FrameLayout
        android:id="@+id/sent_message"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_tailed_outgoing_bubble"
        android:minWidth="100dp"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:paddingEnd="16dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/sent_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/message_text"
            android:textAlignment="textStart"
            android:textColor="@color/colorWhite" />

        <ImageView
            android:id="@+id/sent_message_tick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/message_tick"
            app:srcCompat="@drawable/ic_message_ticked" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/received_message"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_tailed_incoming_bubble"
        android:minWidth="100dp"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:paddingEnd="16dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/received_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/message_text"
            android:textAlignment="textStart"
            android:textColor="@color/colorWhite" />

    </FrameLayout>

</FrameLayout>