<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="MessagingViewModel"
            type="com.muzz.muzzdemo.viewmodel.MessagingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            app:elevation="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/Widget.AppCompat.Toolbar"
                app:popupTheme="@style/Theme.AppCompat.Light">

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/back_button"
                    app:srcCompat="@drawable/ic_back_arrow"
                    tools:ignore="ImageContrastCheck" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/user_avatar"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_app_logo"
                        app:shapeAppearanceOverlay="@style/roundedAvatar" />

                    <TextView
                        android:id="@+id/username"
                        style="@style/Widget.AppCompat.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:gravity="center"
                        android:text="@string/username"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/view_divider"
            app:layout_constraintTop_toBottomOf="@+id/AppBarLayout"
            tools:listitem="@layout/message_item" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e0e0e0"
            app:layout_constraintBottom_toTopOf="@+id/chat_box_layout" />

        <RelativeLayout
            android:id="@+id/chat_box_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <EditText
                android:id="@+id/edit_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_toStartOf="@+id/send_button"
                android:background="@drawable/ev_edit_text_border"
                android:hint="@string/edit_view_default"
                android:inputType="text"
                android:maxLines="6"
                android:paddingStart="24dp"
                android:paddingTop="12dp"
                android:paddingEnd="24dp"
                android:paddingBottom="12dp"
                tools:ignore="Autofill,TextContrastCheck" />

            <ImageButton
                android:id="@+id/send_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bt_button"
                android:contentDescription="@string/send_message"
                android:onClick="sendMessage"
                android:src="@drawable/ic_send" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>